Fixes invisible menu toggler when on mobile in config editor

--- a/css/config-editor.css
+++ b/css/config-editor.css
@@ -10,6 +10,9 @@ html, body {
 		margin: 0;
 		background-color: rgb(0 0 0 / 15%);
 	}
+	.navbar-toggler {
+		filter: invert(1);
+	}
 }
 
 nav #navbarNav ul li a {
